--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "Evan Schwartz <evan@ripple.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "debug": "^3.1.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
-    "koa-route": "^3.2.0",
+    "koa-router": "^7.2.1",
     "superagent": "^3.8.0",
     "uuid": "^3.1.0"
   }
