--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "debug": "^3.1.0",
     "koa": "^2.4.1",
-    "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
     "node-fetch": "^1.7.3",
+    "raw-body": "^2.3.2",
     "superagent": "^3.8.0"
   }
 }
