--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Evan Schwartz <evan@ripple.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "big.js": "^5.0.3",
     "debug": "^3.1.0",
     "koa": "^2.4.1",
     "koa-router": "^7.2.1",
