--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Evan Schwartz <evan@ripple.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "base64url": "^2.0.0",
     "big.js": "^5.0.3",
     "debug": "^3.1.0",
     "koa": "^2.4.1",
     "koa-router": "^7.2.1",
+    "macaroon": "^3.0.0",
     "node-fetch": "^1.7.3",
     "raw-body": "^2.3.2",
     "superagent": "^3.8.0"
