--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "koa-compose": "^4.0.0",
     "macaroon": "^3.0.0",
     "node-fetch": "^1.7.3",
-    "raw-body": "^2.3.2"
+    "raw-body": "^2.3.2",
+    "ripple-keypairs": "^0.10.1",
+    "ripple-lib": "^0.17.8"
   }
 }
