--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "^3.1.0",
     "koa": "^2.4.1",
     "koa-compose": "^4.0.0",
+    "lowdb": "^1.0.0",
     "macaroon": "^3.0.0",
     "node-fetch": "^1.7.3",
     "raw-body": "^2.3.2",
