--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "author": "Evan Schwartz <evan@ripple.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "async-lock": "^1.1.0",
     "big.js": "^5.0.3",
     "debug": "^3.1.0",
     "koa-compose": "^4.0.0",
+    "leveldown": "^2.0.1",
+    "levelup": "^2.0.1",
     "lowdb": "^1.0.0",
     "macaroon": "^3.0.0",
+    "memdown": "^1.4.1",
     "node-fetch": "^1.7.3",
     "raw-body": "^2.3.2",
     "ripple-keypairs": "^0.10.1",
